--- a/page2.html
+++ b/page2.html
@@ -46,7 +46,7 @@ I love you sooo much mwahh ♡ <BR>
     my handsone boyfrieend <BR>
         i know what we'd be doing in prison hehheeheheheh<br> <br>
         
-<a href="day1.html">DAY ONEEE</a>
+<a href="Day1.html">DAY ONEEE</a>
 <BR> <BR>
 <footer>
     &copy; 2025 ♡ Your HUSBANDDD ♡ </footer>
