--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ ANDDDDD
 
 
 
-A EVENNNN 
+ANDDDD EVENNNN 
 
 
 ⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠙⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛⠛
@@ -249,8 +249,6 @@ A EVENNNN
 ⠂⠀⢘⣧⠰⡇⠀⠀⠀⠀⠓⠈⠀⠸⣽⣷⠹⡈⢻⣽⣿⡏⠙⢛⣿⡇⠀⠀⠀⠸⡄⠀⠁⢘⠛⣿⣷⠴⠚⣿⣅⢇⢠⠀⢈⣿⡇⠀⠀⠀⣿⣿⡇⠡⣿⣷⠀⠸⢿⡟⡧⣀⠸⠿⢿⣟⣆⣤⡟⡰⡏⠀⠀⢿⣿⠁⢸⣿⠀⢻⣫⠄⢺⣿
 ⠀⠀⢸⡇⢀⡇⠀⠀⠀⠀⠀⠀⠂⠀⠙⠣⡄⠈⠎⣹⢿⡷⠞⠋⣿⣇⠀⠀⠀⠀⡗⠀⠀⢠⠆⣿⡏⠀⠀⣿⡝⠘⡎⡄⢸⣿⠇⠀⠀⠀⣿⡿⠓⠤⣿⣽⠀⣺⣷⠁⠀⠻⠽⠵⣿⡟⠉⠹⢹⣟⡇⠀⠀⣭⣿⠀⠘⠛⠀⢸⡇⢰⣼⣿
 ⣇⢠⢼⣧⠀⡇⠀⠀⠀⠀⠀⠀⠘⠀⣀⠴⠃⠀⢠⠡⡼⡇⠀⠀⢿⣿⠀⠀⠀⠀⠃⠀⠀⠸⠀⣿⡷⠀⡀⠙⡳⠈⠀⠬⠌⠉⠀⠀⠀⠀⢿⣷⠀⠀⠀⠀⠀⣽⡿⠀⠀⠀⠀⠈⣿⡟⠪⡣⠙⣿⡗⠃⠤⠉⠋⠀⠀⠀⠀⢸⡇⠀⢸⣿
-
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸
 ⠲⢶⣶⠒⠒⠿⣶⠒⠚⢿⡒⠛⣻⣿⣿⣿⡛⠛⢻⡟⠛⣻⠟⢻⣿⡿⣿⠉⠉⠛⢿⡛⠛⢻⡟⠛⢿⣿⣿⣿⣿⣹⡿⠋⣿⠟⠛⣻⠟⢻⡿⠛⠿⣿⠻⢿⡛⢿⡛⢿⣿⣿⣿⣿⣿⣿⠟⠛⣿⠟⣻⠟⢛⣿⠿⠷⢸
 ⠀⠀⠹⣧⠀⠀⢹⡆⠀⢸⣧⡾⣻⣿⣧⠀⠙⣳⣾⡀⢰⠏⢠⡿⢸⠀⠘⢷⡀⠀⠀⢿⡀⠀⢻⣴⠟⣿⣽⣽⣿⠟⢷⣤⡇⠀⢠⡏⢠⡟⠀⠀⠀⠈⣇⠈⣧⢈⣷⣟⢻⣾⣹⣿⣼⠿⣦⣼⠃⣰⠏⢀⡾⠁⠀⠀⢸
 ⠀⠀⠀⠘⣧⠀⠀⣿⢠⡾⠛⣷⣏⣿⠹⣤⡾⠉⣩⡿⠿⣦⣿⠁⢸⠀⠀⠈⣧⠀⠀⢸⣧⡶⠛⢿⣼⠁⢹⠁⠈⣷⣠⡟⠛⢶⣼⡇⣾⠀⠀⠀⠀⠀⢸⣠⡿⢿⣄⢻⣾⡋⢻⠏⢿⣴⠟⢻⣶⡏⠀⡼⠁⠀⠀⠀⢸
