--- a/Day1.html
+++ b/Day1.html
@@ -47,7 +47,7 @@ I think ur rly amazing and I'd love you no matter what and honestly ur so amazin
 I just wanna spend the rest of my life with u <br><br>
 MWAHHHHHH <br>
 
-<a href="INDEX.html">Back</a>
+<a href="index.html">Back</a>
 <BR> <BR>
 <footer>
     &copy; 2025 ♡ Your Boyfriend™ ♡ </footer>
